Implement rest of OCSF model
Signed-off-by: Chase Engelbrecht <engechas@amazon.com>

--- a/data-prepper-plugins/rule-engine/build.gradle
+++ b/data-prepper-plugins/rule-engine/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation libs.commons.lang3
+    implementation 'org.projectlombok:lombok:1.18.26'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
 
 generateGrammarSource {
