changes to create a working version of the SRE
Signed-off-by: Jeremy Michael <jsusanto@amazon.com>

--- a/data-prepper-plugins/rule-engine/build.gradle
+++ b/data-prepper-plugins/rule-engine/build.gradle
@@ -66,6 +66,12 @@ jacocoTestCoverageVerification {
     }
 }
 
+tasks.named("sourcesJar", Jar) {
+    dependsOn generateGrammarSource
+    from "$buildDir/generated-src/antlr/main/${antlrGeneratedPackageDirectory}"
+}
+
+
 checkstyleMain {
     source = fileTree('src/main/java')
 }
