--- a/settings.gradle
+++ b/settings.gradle
@@ -169,6 +169,7 @@ include 'data-prepper-plugins:aws-sqs-common'
 include 'data-prepper-plugins:buffer-common'
 include 'data-prepper-plugins:sqs-source'
 include 'data-prepper-plugins:sqs-common'
+include 'data-prepper-plugins:rule-engine'
 include 'data-prepper-plugins:cloudwatch-logs'
 //include 'data-prepper-plugins:http-sink'
 //include 'data-prepper-plugins:sns-sink'
